Fix background color behind header / search bar

--- a/src/resources/postcss/components/full/_events-bar.pcss
+++ b/src/resources/postcss/components/full/_events-bar.pcss
@@ -6,8 +6,11 @@
 
 .tribe-events {
 
-	.tribe-events-c-events-bar {
-		background-color: var(--color-background);
+	.tribe-events-header--has-event-search .tribe-events-c-events-bar {
+		
+		.tribe-common--breakpoint-medium& {
+			background-color: var(--color-background);
+		}
 	}
 
 	.tribe-events-c-events-bar--border {
